[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Ability/Base/BaseGameplayAbility.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Ability/GameplayAbility_AreaDetection.gd" type="Script" id=2]
[ext_resource path="res://src/Ability/GrazeExpGiver.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/player/bullet/bullet.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="GameplayAbility_AreaDetection" instance=ExtResource( 1 )]
script = ExtResource( 2 )
ActorToSpawnPath = ""
CustomAnimName = "_weapon"
CustomAnimDuration = 0.3
LingeringAnimName = "_active_weapon"
LingeringAnimDuration = 1.0
SpawnSocketName = "ShootSocket"

[node name="GrazeExpGiver" parent="." index="3" instance=ExtResource( 3 )]

[node name="HurtDetection" type="Area2D" parent="." index="4"]
visible = false
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="Sprite" type="Sprite" parent="HurtDetection" index="0"]
visible = false
material = SubResource( 1 )
texture = ExtResource( 4 )

[node name="AreaLingerTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="HurtDetection" to="." method="_on_HurtDetection_body_entered"]
[connection signal="timeout" from="AreaLingerTimer" to="." method="_on_AreaLingerTimer_timeout"]
